# book_manager

./: .env  env_test.py  pyproject.toml
app/: __init__.py  db.py  main.py  models.py  schemas.py
app/routers/: __init__.py  books.py
